--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -12,3 +12,6 @@ $confirmation-window-z-index: 999;
 $modal-z-index: 998;
 $post-z-index: 0;
 $banner-z-index: 1;
+
+/** Navbar */
+$navbar-top-height: 25px;
