--- a/resources/assets/sass/components/_modal.scss
+++ b/resources/assets/sass/components/_modal.scss
@@ -2,7 +2,15 @@
     z-index: $modal-z-index;
     .modal-content.is-large {
         width: 70%;
-    }
+	}
+	.modal-close {
+		background: $danger;
+		color: $white;
+		transition: 200ms;
+		&:hover {
+			transform: rotate(180deg);
+		}
+	}
     @media only screen and (max-width:1088px) {
         .modal-content.is-large {
             width: 90%;
