--- a/resources/assets/sass/components/_navbar.scss
+++ b/resources/assets/sass/components/_navbar.scss
@@ -36,7 +36,7 @@
 }
 
 .navbar-top {
-    height: 25px;
+    height: $navbar-top-height;
     width: 100%;
     background: $primary;
     position: absolute;
@@ -49,10 +49,9 @@
         padding: 0 10px;
     }
     a {
-        line-height: 25px;
+        line-height: $navbar-top-height;
         font-size: 0.9rem;
         color: $white;
-        //text-transform: uppercase;
         &:hover {
             text-decoration: underline;
         }
