--- a/resources/assets/sass/components/_card.scss
+++ b/resources/assets/sass/components/_card.scss
@@ -174,6 +174,24 @@
         .details {
             left: 0%;
         }
+	}
+	.button {
+        &.is-floating {
+            position: absolute;
+            z-index: $fixed-button-z-index;
+            border-radius: 50%;
+            top: -8px;
+            left: -8px;
+            &:hover {
+                transform: scale(1.1);
+			}
+			&.is-square {
+				border-radius: 0;
+				top: 0;
+				left: auto;
+            	right: 0;
+			}
+        }
     }
     @media (min-width: 1088px) {
         flex-direction: row;
