--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -72,10 +72,12 @@ span.info {
 	padding: 10px 0 0 0;
 	cursor: pointer;
 	&.is-animated {
-		transition: 180ms;
+		transition: 1500ms 1000ms linear;
 		&:hover {
 			transition: 100ms;
-			transform: rotate(2deg);
+			transform: scale(1.02);
+			box-shadow: 4px 4px 10px rgba(0,0,0,0.16),
+				0px 0px 3px rgba(0,0,0,0.18);
 		}
 	}
     .work-title {
@@ -112,16 +114,52 @@ span.info {
 		width: 100%;
 		height: 100%;
 		box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
-        0 3px 1px -2px rgba(0,0,0,0.12),
-		0 1px 5px 0 rgba(0,0,0,0.2);
+			0 3px 1px -2px rgba(0,0,0,0.12),
+			0 1px 5px 0 rgba(0,0,0,0.2);
 		transform: scale(1.01);
 	}
 }
 .video-list {
-	display: flex;
-	justify-content: space-around;
-	flex-direction: column;
 	text-align: center;
+	overflow: hidden;
+	.title {
+		display: block;
+		margin-bottom: .5rem;
+		font-size: 1.7rem;
+	}
+	li {
+		margin-bottom: .5em;
+		font-size: .85rem;
+		background: $primary;
+		padding: 1em 0.7em;
+		position: relative;
+		box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
+			0 3px 1px -2px rgba(0,0,0,0.12),
+			0 1px 5px 0 rgba(0,0,0,0.2);
+		i, a {
+			transition: 1s;
+		}
+		.video-link {
+			color: $white;
+		}
+		&:hover {
+			i, .video-link {
+				transition: 280ms;
+			}
+			.video-link {
+				text-shadow: 0 0 5px rgba(255, 255, 255, 0.8);
+			}
+			i.fa-youtube {
+				color: #FF0000;
+			}
+		}
+	}
+	.button {
+		top: 0;
+		left: 0;
+		float: left;
+		margin-right: 1em;
+	}
 }
 
 //EVENTO EM DESTAQUE
