--- a/resources/assets/sass/_global.scss
+++ b/resources/assets/sass/_global.scss
@@ -1,22 +1,22 @@
 body, html {
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
-    padding: 0;
-    max-width: 100% !important;
-    overflow-x: hidden !important;
-    background: $white;
+	font-family: 'Montserrat', sans-serif;
+	margin: 0;
+	padding: 0;
+	max-width: 100% !important;
+	overflow-x: hidden !important;
+	background: $white;
 }
 
 body {
-    overflow-y: hidden;
+	overflow-y: hidden;
 }
 
 .button, ::placeholder {
-    font-family: 'Montserrat', sans-serif !important;
+	font-family: 'Montserrat', sans-serif !important;
 }
 
 a, .is-link {
-    text-decoration: none;
+	text-decoration: none;
 	cursor: pointer;
 	&.is-disabled {
 		* {
@@ -29,30 +29,30 @@ a, .is-link {
 }
 
 span.info {
-    display: block;
-    font-size: .9rem;
-    font-style: italic;
-    text-align: center;
+	display: block;
+	font-size: .9rem;
+	font-style: italic;
+	text-align: center;
 }
 
 // VISUALIZAÇÃO DAS NOTÍCIAS
 .post-title {
 	display: block;
-    text-align: center;
+	text-align: center;
 	line-height: 1.8em;
 	color: $primary;
-    font-size: 2rem;
-    font-weight: 600;
+	font-size: 2rem;
+	font-weight: 600;
 }
 .post-meta {
-    margin: 20px 0;
-    display: block;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    span {
-        margin: 0 15px;
-    }
+	margin: 20px 0;
+	display: block;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	span {
+		margin: 0 15px;
+	}
 }
 .post-body {
 	h1 { font-size: 2em; }
@@ -61,34 +61,41 @@ span.info {
 	h4 { font-size: 1.12em; }
 	h5 { font-size: .83em; }
 	h6 { font-size: .75em; }
+	iframe {
+		width: 100%;
+		box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
+		0 3px 1px -2px rgba(0,0,0,0.12),
+		0 1px 5px 0 rgba(0,0,0,0.2);
+		transform: scale(1.01);
+	}
 }
 // CARDS DA BIBLIOTECA
 .work {
 	position: relative;
 	box-shadow: 0 2px 2px 0 rgba(0,0,0,0.08),
-            0 3px 1px -2px rgba(0,0,0,0.06),
-			0 1px 5px 0 rgba(0,0,0,0.09);
+	0 3px 1px -2px rgba(0,0,0,0.06),
+	0 1px 5px 0 rgba(0,0,0,0.09);
 	border: 1px solid $muted;
 	padding: 10px 0 0 0;
 	cursor: pointer;
 	&.is-animated {
-		transition: 1500ms 1000ms linear;
+		transition: 1500ms linear;
 		&:hover {
-			transition: 100ms;
-			transform: scale(1.02);
+			transition: 300ms;
+			transform: scale(1.01);
 			box-shadow: 4px 4px 10px rgba(0,0,0,0.16),
-				0px 0px 3px rgba(0,0,0,0.18);
+			0px 0px 3px rgba(0,0,0,0.18);
 		}
 	}
-    .work-title {
-        font-weight: bold;
-        letter-spacing: 1px;
+	.work-title {
+		font-weight: bold;
+		letter-spacing: 1px;
 		color: $primary;
 		padding: 0 20px;
 	}
 	.meta {
 		display: flex;
-  		justify-content: space-between;
+		justify-content: space-between;
 		color: $muted;
 		margin: 1rem 0 0 0;
 		.tag:first-of-type {
@@ -106,7 +113,7 @@ span.info {
 	}
 }
 .iframe-container {
-    width: 100%;
+	width: 100%;
 	position: relative;
 	padding-bottom: 56.25%; //16:9
 	iframe {
@@ -114,8 +121,8 @@ span.info {
 		width: 100%;
 		height: 100%;
 		box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
-			0 3px 1px -2px rgba(0,0,0,0.12),
-			0 1px 5px 0 rgba(0,0,0,0.2);
+		0 3px 1px -2px rgba(0,0,0,0.12),
+		0 1px 5px 0 rgba(0,0,0,0.2);
 		transform: scale(1.01);
 	}
 }
@@ -134,8 +141,8 @@ span.info {
 		padding: 1em 0.7em;
 		position: relative;
 		box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),
-			0 3px 1px -2px rgba(0,0,0,0.12),
-			0 1px 5px 0 rgba(0,0,0,0.2);
+		0 3px 1px -2px rgba(0,0,0,0.12),
+		0 1px 5px 0 rgba(0,0,0,0.2);
 		i, a {
 			transition: 1s;
 		}
@@ -155,10 +162,11 @@ span.info {
 		}
 	}
 	.button {
-		top: 0;
-		left: 0;
+		top: -1em;
+		left: -0.7em;
 		float: left;
 		margin-right: 1em;
+		font-size: 1em;
 	}
 }
 
